@@ -9,8 +9,11 @@
 ifndef GLOBALINCLUDED
 GLOBALINCLUDED=1
 
+# Uncomment to disable 'Entering/Leaving directory' messages:
+#MAKEFLAGS += --no-print-directory
+
 # Default C/C++ compiler flags
-CXXFLAGS = -O2 -Wall
+CXXFLAGS = -O2 -Wall -I$(TOPDIR)/lib -I$(TOPDIR)/etc
 CFLAGS = $(CXXFLAGS) -lm
 
 # How to execute a command as root:
@@ -20,6 +23,11 @@ ROOTCMD=su root -c
 
 # Where to install setuid root binaries: (default: own directory)
 SUIDINSTALLDIR=$(CURDIR)
+
+# Check whether we are running under Cygwin:
+ifneq ($(findstring $(shell uname),CYGWIN),)
+CYGWIN = 1
+endif
 
 # Define the 'default' target here: because of inclusion of this file,
 # it will be the default target in all subdirectories and we default to
