@@ -3,6 +3,8 @@ DOMjudge Programming Contest Judging System
 Version 2.0.0 - SVN
 -------------------
  - Use correct last modified date of team manual (Closes: #1744121).
+ - Split general functions from submitcommon.cc to lib.misc.c and
+   improved makefile structure and build process under Cygwin.
 
 Version 2.0.0 Release Candidate 2 - 25 June 2007
 ------------------------------------------------
